set(CMAKE_INSTALL_PREFIX /tmp)
set(CMAKE_BUILD_TYPE "Debug") 
set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")

include_directories(../include)
aux_source_directory(.  SRC_DIR)
find_package(OpenSSL)
add_executable(test ${SRC_DIR})
target_link_libraries(test lua dl)
if(OPENSSL_FOUND)
	include_directories(${OPENSSL_INCLUDE_DIR})
	target_link_libraries(test ${OPENSSL_LIBRARY} crypto)
	message("-- #[${OPENSSL_INCLUDE_DIR}]# #[${CMAKE_INSTALL_PREFIX}]#")
else(OPENSSL_FOUND)
	message("-- @OPENSSL NOT FOUND.@")
endif(OPENSSL_FOUND)
install(FILES test.lua func.lua DESTINATION ${CMAKE_INSTALL_PREFIX})
install(TARGETS test RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
